--- a/templates/book.html
+++ b/templates/book.html
@@ -21,7 +21,14 @@ th{text-align: center; font-size: 25px}
                 <th Style="width:200px">Tiêu Đề</th>
                 <th Style="width:200px">Ngày Xuất Bản</th>
                 <th Style="width:150px">Tác Giả</th>
-                <th Style="width:300px" class="last">Hành Động</th>
+                <th Style="width:300px" class="last">
+                    <div> {% if user.is_authenticated %}
+                        <a>Hành Động</a>
+                        {% else %}
+                        <a></a>
+                        {% endif %}
+                    </div>
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -44,8 +51,15 @@ th{text-align: center; font-size: 25px}
                 </td>
 
                 <td>
-                    <a Style="padding:10px" href="/book/{{ book.pk }}/delete" class="btn btn-danger">Xóa Sách</a>
-                    <a Style="padding:10px" href="/book/{{ book.pk }}/edit" class="btn btn-success">Cập Nhật Sách</a>
+                    <div> {% if user.is_authenticated %}
+                        <a Style="padding:10px" href="/book/{{ book.pk }}/delete" class="btn btn-danger">Xóa Sách</a>
+                        <a Style="padding:10px" href="/book/{{ book.pk }}/edit" class="btn btn-success">Cập Nhật
+                            Sách</a>
+                        {% else %}
+                        <a></a>
+                        {% endif %}
+                    </div>
+
                 </td>
 
             </tr>
