--- a/templates/addauthor.html
+++ b/templates/addauthor.html
@@ -4,11 +4,17 @@
 <title>Thêm Tác Giả</title>
 {% endblock %}
 
+{% block css %}
+.last{color: red}
+a,td{text-align: center; font-size: 20px}
+th{text-align: center; font-size: 25px}
+{% endblock %}
+
 {% block content %}
 
 <div class="container" style="padding-bottom: 5px;">
     <div class="col-md-4">
-        <h2>Thêm Tác Giả</h2>
+        <h1>Thêm Tác Giả</h2>
         <form action="/addauthor/" method="post">
             {% csrf_token %}
             <div class="form-group">
