--- a/templates/author.html
+++ b/templates/author.html
@@ -18,9 +18,16 @@ th{text-align: center; font-size: 25px}
     <table class="table table-striped table-hover table-bordered">
         <thead>
             <tr>
-                <th Style="width:20px;" >ID</th>
+                <th Style="width:20px;">ID</th>
                 <th Style="width:200px;">Tác Giả</th>
-                <th Style="width:400px;" class="last">Hành Động</th>
+                <th Style="width:400px;" class="last">
+                    <div> {% if user.is_authenticated %}
+                        <a>Hành Động</a>
+                        {% else %}
+                        <a></a>
+                        {% endif %}
+                    </div>
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -31,9 +38,17 @@ th{text-align: center; font-size: 25px}
                 <td>
                     <a href="/author_book/{{ author.pk }}">{{ author.name }}</a>
                 </td>
-                <td >
-                    <a Style="padding:10px" href="/delauthor/{{ author.pk }}" class="btn btn-danger">Xóa Tác Giả</a>
-                    <a Style="padding:10px" href="/editauthor/{{ author.pk }}" class="btn btn-success">Cập Nhật Tác Giả</a>
+                <td>
+                    <div> {% if user.is_authenticated %}
+                        <a Style="padding:10px" href="/delauthor/{{ author.pk }}" class="btn btn-danger">Xóa Tác Giả</a>
+                        <a Style="padding:10px" href="/editauthor/{{ author.pk }}" class="btn btn-success">Cập Nhật Tác
+                            Giả</a>
+                        {% else %}
+                        <a></a>
+                        {% endif %}
+                    </div>
+                    </th>
+
                 </td>
 
             </tr>
@@ -44,4 +59,3 @@ th{text-align: center; font-size: 25px}
 </div>
 
 {% endblock %}
-
