--- a/templates/index.html
+++ b/templates/index.html
@@ -2,3 +2,9 @@
 {% block title %}
 <title>Trang Chủ</title>
 {% endblock %}
+
+{% block css %}
+.last{color: red}
+a,td{text-align: center; font-size: 20px}
+th{text-align: center; font-size: 25px}
+{% endblock %}
