--- a/templates/author.html
+++ b/templates/author.html
@@ -12,7 +12,13 @@ th{text-align: center; font-size: 25px}
 {% block content %}
 
 <div class="container" style="padding-bottom: 5px;">
-    <a href="/addauthor/" class="btn btn-info glyphicon glyphicon-plus">Thêm Tác Giả</a>
+    <div> {% if user.is_authenticated %}
+        <a href="/addauthor/" class="btn btn-info glyphicon glyphicon-plus">Thêm Tác Giả</a>
+        {% else %}
+        <a></a>
+        {% endif %}
+    </div>
+    
 </div>
 <div class="container">
     <table class="table table-striped table-hover table-bordered">
