--- a/templates/book.html
+++ b/templates/book.html
@@ -11,7 +11,13 @@ th{text-align: center; font-size: 25px}
 
 {% block content %}
 <div class="container" style="padding-bottom: 5px;">
-    <a href="/addbook/" class="btn btn-info glyphicon glyphicon-plus">Thêm Sách</a>
+    <div> {% if user.is_authenticated %}
+        <a href="/addbook/" class="btn btn-info glyphicon glyphicon-plus">Thêm Sách</a>
+        {% else %}
+        <a></a>
+        {% endif %}
+    </div>
+    
 </div>
 <div class="container">
     <table class="table table-striped table-hover table-bordered">
@@ -38,14 +44,14 @@ th{text-align: center; font-size: 25px}
             <tr>
                 <td>{{ forloop.counter }}</td>
                 <td hidden>{{ book.id}}</td>
-                <td>{{ book.title }}</td>
+                <td> <a href="/book/{{ book.pk }}/bookdetail"> {{ book.title }} </a></td>
                 <td>{{ book.publish_date|date:'Y-m-d' }}</td>
                 <td>
                     {% for author in book.authors.all %}
                     {% if forloop.last %}
-                    <span>{{ author.name }}</span>
+                    <a href="/author_book/{{ author.pk }}">{{ author.name }}</a>
                     {% else %}
-                    <span>{{ author.name }}</span>
+                    <a href="/author_book/{{ author.pk }}">{{ author.name }}</a>
                     {% endif %}
                     {% endfor %}
                 </td>
