--- a/templates/author/author_book.html
+++ b/templates/author/author_book.html
@@ -1,5 +1,11 @@
-{% extends "base.html" %} {% block css %} .last{color: red} a,td{text-align:
-center; font-size: 20px} th{text-align: center; font-size: 25px} {% endblock %}
+{% extends "base.html" %} 
+
+{% block css %}
+.last{color: red}
+a,td{text-align: center; font-size: 20px}
+th{text-align: center; font-size: 25px}
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
