--- a/templates/book/addbook.html
+++ b/templates/book/addbook.html
@@ -29,7 +29,10 @@ th{text-align: center; font-size: 25px}
         <div class="form-group">
             <table>
                 <tr>
-                    <th Style="width:250px; padding-left: 20px; padding-bottom: 15px; padding-bottom: 15px;text-align: left;; padding-left: 20px ;text-align: left;"><label for="date">2. Ngày Xuất Bản</label></th>
+                    <th Style="width:250px; padding-left: 20px; padding-bottom: 15px; padding-bottom: 15px;text-align: left; padding-left: 20px ;text-align: left;">
+                        <label for="date">2. Ngày Xuất Bản</label>
+                        <a>MM/DD/YY</a>
+                    </th>
                     <th><input type="date" class="form-control" id="date" name="pub_date"></th>
                 </tr>
             </table>
@@ -38,7 +41,7 @@ th{text-align: center; font-size: 25px}
         <div class="form-group">
             <table>
                 <tr>
-                    <th Style="width:250px; padding-left: 20px; padding-bottom: 15px; padding-bottom: 15px;text-align: left;; padding-left: 20px ;text-align: left;"><b style="margin-bottom: 5px;display: inline-block">3. Chọn Tác Giả</b>
+                    <th Style="width:250px; padding-left: 20px; padding-bottom: 15px; padding-bottom: 15px;text-align: left; padding-left: 20px ;text-align: left;"><b style="margin-bottom: 5px;display: inline-block">3. Chọn Tác Giả</b>
                     </th>
                     <th><select class="form-control" multiple name="authors_id_list">
                             {% for author in author_list %}
