--- a/templates/book/bookdetail.html
+++ b/templates/book/bookdetail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-<title>Trang Chi Tiết</title>
+<title>Trang Chi Tiết: {{ book_obj.title }}</title>
 {% endblock %}
 
 {% block css %}
