--- a/templates/category/category_book.html
+++ b/templates/category/category_book.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %} 
 
+{% block title %}
+<title>Thể Loại: {{ category.name }}</title>
+{% endblock %}
+
 {% block css %}
 .last{color: red}
 a,td{text-align: center; font-size: 20px}
